# ai-assisted-courses

./: README.md
methods-of-ai/: .gitignore  AGENTS.md  outline.md  pyproject.toml
methods-of-ai/.github/classroom/: autograding.json
methods-of-ai/.github/workflows/: classroom.yml
methods-of-ai/app/: __init__.py
methods-of-ai/app/assessments/: __init__.py  reflection.py  summary.py
methods-of-ai/app/course/: __init__.py  overview.py
methods-of-ai/app/labs/: __init__.py  base.py
methods-of-ai/app/resources/: __init__.py  datasets.py
methods-of-ai/common/: __init__.py  metrics.py  seed.py  tensorboard.py  viz.py
methods-of-ai/docs/: acceptance_summary.md  appendix.md  capstone_reflection.md  course_overview.md  dataset_links_and_licenses.md  environment_and_tooling.md  labs_overview.md  learning_with_ai_support.md
methods-of-ai/lab1_tabular/: README.md  __init__.py  data.py  eval.py  model.py  preclass.md  reading.md  theory.md  train_tabular.py
methods-of-ai/lab2_vision/: README.md  __init__.py  calibrate.py  train_cnn.py
methods-of-ai/lab3_text/: README.md  train_spam.py  vocab.py
methods-of-ai/lab4_timeseries/: README.md  train_gru.py
methods-of-ai/lab4_transfer/: README.md  __init__.py  train_transfer.py
methods-of-ai/lab5_recsys/: README.md  train_mf.py
methods-of-ai/lab5_reliability/: README.md  __init__.py  analyze.py  metrics.py  slices.py
methods-of-ai/lab6_generative/: README.md  train_vae.py
methods-of-ai/lab6_packaging/: README.md  __init__.py  package.py
methods-of-ai/tools/: split_outline.py
(+44 files in other folders)
