[tool.poetry]
name = "training-app"
version = "0.1.0"
description = "Methods of Deep Learning course scaffolding"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "3.11.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchtext = "^0.16.0"
torchaudio = "^2.1.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
tensorboard = "^2.14.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
